--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 kotlin.code.style=official
-kotlin.version=1.6.10
+kotlin.version=1.7.20
 agp.version=4.2.2
-compose.version=1.1.0
-systemProp.http.proxyHost=127.0.0.1
-systemProp.http.proxyPort=8001
-systemProp.https.proxyHost=127.0.0.1
-systemProp.https.proxyPort=10809
+compose.version=1.2.1
+#systemProp.http.proxyHost=127.0.0.1
+#systemProp.http.proxyPort=8001
+#systemProp.https.proxyHost=127.0.0.1
+#systemProp.https.proxyPort=10809
